--- a/Rx.NET/Source/System.Reactive.Observable.Aliases/System.Reactive.Observable.Aliases.csproj
+++ b/Rx.NET/Source/System.Reactive.Observable.Aliases/System.Reactive.Observable.Aliases.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Observable" Condition=" '$(BuildFlavor)' == 'SILVERLIGHTM7' " />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Observable.Aliases.cs" />
