--- a/Ix.NET/Source/Tests/Tests.csproj
+++ b/Ix.NET/Source/Tests/Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests.Aggregates.cs" />
+    <Compile Include="TaskExtTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\System.Interactive.Async\System.Interactive.Async.csproj" Condition=" '$(BuildFlavor)' == 'DESKTOPCLR40' Or '$(BuildFlavor)' == 'DESKTOPCLR45' ">
