This includes two fixes. 1. AsyncEnumerable. TakeLast(0) takes forever to return. new int[] { 1 }.ToAsyncEnumerable().TakeLast(0).ForEachAsync(_ => { }).Wait() 2. AsyncEnumerable Task extension class method throws wrapped AggregatedException which is not useful if someone wants to understand root cause of the problem.  See the enitre thread here - https://github.com/aspnet/EntityFramework/issues/2192

--- a/Ix.NET/Source/Tests/Tests.csproj
+++ b/Ix.NET/Source/Tests/Tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="AsyncTests.Aggregates.cs" />
     <Compile Include="AsyncTests.Bugs.cs" />
     <Compile Include="AsyncTests.Exceptions.cs" />
+    <Compile Include="TaskExtTests.cs" />
     <Compile Include="Tests.Imperative.cs" />
     <Compile Include="Tests.Qbservable.cs" />
     <Compile Include="Tests.Single.cs" />
