--- a/Ix.NET/Source/Tests/Tests.csproj
+++ b/Ix.NET/Source/Tests/Tests.csproj
@@ -68,6 +68,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="AssertEx.cs" />
+    <Compile Include="AsyncQueryableTests.Generated.cs" />
     <Compile Include="AsyncTests.Creation.cs" />
     <Compile Include="AsyncTests.cs" />
     <Compile Include="AsyncTests.Conversions.cs" />
@@ -76,6 +78,7 @@
     <Compile Include="AsyncTests.Aggregates.cs" />
     <Compile Include="AsyncTests.Bugs.cs" />
     <Compile Include="AsyncTests.Exceptions.cs" />
+    <Compile Include="NopObserver.cs" />
     <Compile Include="TaskExtTests.cs" />
     <Compile Include="Tests.Imperative.cs" />
     <Compile Include="Tests.Qbservable.cs" />
@@ -89,6 +92,10 @@
     <Compile Include="Tests.Aggregates.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\System.Interactive.Async.Providers\System.Interactive.Async.Providers.csproj">
+      <Project>{b0350cd4-37f7-4508-b67f-d4bb3b9092aa}</Project>
+      <Name>System.Interactive.Async.Providers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\System.Interactive.Async\System.Interactive.Async.csproj" Condition=" '$(BuildFlavor)' == 'DESKTOPCLR40' Or '$(BuildFlavor)' == 'DESKTOPCLR45' ">
       <Project>{7269A578-326A-4C3E-9874-A2D2600095BC}</Project>
       <Name>System.Interactive.Async</Name>
@@ -101,6 +108,9 @@
       <Project>{8E4B04F0-915E-48F9-9796-76278C6094BD}</Project>
       <Name>System.Interactive</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="..\Import.targets" />
 </Project>
