--- a/Ix.NET/Source/Common.targets
+++ b/Ix.NET/Source/Common.targets
@@ -114,7 +114,7 @@
   <!-- Build properties for each platform, independent of debug/release build -->
   
   <PropertyGroup Condition=" '$(BuildTarget)' == 'PL' ">
-    <DefineConstants>$(DefineConstants);HAS_AWAIT</DefineConstants>
+    <DefineConstants>$(DefineConstants);HAS_AWAIT;CRIPPLED_REFLECTION</DefineConstants>
     <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
@@ -122,7 +122,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(BuildTarget)' == 'PLITE' ">
-    <DefineConstants>$(DefineConstants);HAS_AWAIT</DefineConstants>
+    <DefineConstants>$(DefineConstants);HAS_AWAIT;CRIPPLED_REFLECTION</DefineConstants>
     <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
