--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,9 @@ ClientBin
 stylecop.*
 ~$*
 *.dbmdl
+.vs/
+project.lock.json
+artifacts/
 Generated_Code #added for RIA/Silverlight projects
 
 # Backup & report files from converting an old project file to a newer
