bugfix - these files should not be included in build as they are ignored in the original csproj

--- a/Rx.NET/Source/System.Reactive.Linq/project.json
+++ b/Rx.NET/Source/System.Reactive.Linq/project.json
@@ -10,7 +10,12 @@
     "licenseUrl": "http://go.microsoft.com/fwlink/?LinkID=261272",
     "requireLicenseAcceptance": true,
 
-    "exclude": [ "*/**/ImmutableList.cs" ],
+  "exclude": [
+    "*/**/ImmutableList.cs",
+    "Reactive/Observer.Extensions.cs",
+    "Reactive/Internal/Observers.cs",
+    "Reactive/Internal/Producer.cs"
+  ],
 
     "dependencies": {
         "System.Reactive.Core": { "target": "project" }
