--- a/Rx.NET/Source/System.Reactive.Interfaces/project.json
+++ b/Rx.NET/Source/System.Reactive.Interfaces/project.json
@@ -38,6 +38,32 @@
                 ]
             }
         },
+        "dotnet5.1": {
+            "compilationOptions": {
+                "define": [
+                    "NO_EVENTARGS_CONSTRAINT",
+                    "HAS_EDI",
+                    "HAS_WINRT",
+                    "HAS_PROGRESS",
+                    "PREFER_ASYNC",
+                    "HAS_AWAIT",
+                    "HAS_APTCA",
+                    "NO_REMOTING",
+                    "NO_SERIALIZABLE",
+                    "NO_THREAD",
+                    "CRIPPLED_REFLECTION",
+                    "PLIB",
+                    "USE_TIMER_SELF_ROOT"
+                ]
+            },
+            "dependencies": {
+                "System.Diagnostics.Tools": "4.0.0",
+                "System.Linq": "4.0.0",
+                "System.Linq.Expressions": "4.0.10",
+                "System.Resources.ResourceManager": "4.0.0",
+                "System.Threading": "4.0.10"
+            }
+        },
         "dotnet5.2": {
             "compilationOptions": {
                 "define": [
