--- a/Rx.NET/Source/System.Reactive.Interfaces/project.json
+++ b/Rx.NET/Source/System.Reactive.Interfaces/project.json
@@ -59,9 +59,10 @@
             "dependencies": {
                 "System.Diagnostics.Tools": "4.0.0",
                 "System.Linq": "4.0.0",
-                "System.Linq.Expressions": "4.0.10",
+                "System.Linq.Expressions": "4.0.0",
                 "System.Resources.ResourceManager": "4.0.0",
-                "System.Threading": "4.0.10"
+                "System.Threading": "4.0.0",
+                "System.Runtime": "4.0.0"
             }
         },
         "dotnet5.2": {
