--- a/Rx.NET/Source/System.Reactive.Providers/project.json
+++ b/Rx.NET/Source/System.Reactive.Providers/project.json
@@ -27,52 +27,82 @@
             }
         },
         "net45": {
-          "compilationOptions": {
-            "define": [
-              "NO_EVENTARGS_CONSTRAINT",
-              "HAS_EDI",
-              "HAS_WINRT",
-              "HAS_PROGRESS",
-              "PREFER_ASYNC",
-              "HAS_AWAIT",
-              "HAS_APTCA",
-              "HAS_DISPATCHER_PRIORITY",
-              "HAS_WINFORMS",
-              "USE_TIMER_SELF_ROOT"
-            ]
-          },
-          "dependencies": {
-            "System.Reflection": "4.1.0-beta-23516"
-          }
+            "compilationOptions": {
+                "define": [
+                    "NO_EVENTARGS_CONSTRAINT",
+                    "HAS_EDI",
+                    "HAS_WINRT",
+                    "HAS_PROGRESS",
+                    "PREFER_ASYNC",
+                    "HAS_AWAIT",
+                    "HAS_APTCA",
+                    "HAS_DISPATCHER_PRIORITY",
+                    "HAS_WINFORMS",
+                    "USE_TIMER_SELF_ROOT"
+                ]
+            },
+            "dependencies": {
+                "System.Reflection": "4.1.0-beta-23516"
+            }
+        },
+        "dotnet5.1": {
+            "compilationOptions": {
+                "define": [
+                    "NO_EVENTARGS_CONSTRAINT",
+                    "HAS_EDI",
+                    "HAS_WINRT",
+                    "HAS_PROGRESS",
+                    "PREFER_ASYNC",
+                    "HAS_AWAIT",
+                    "HAS_APTCA",
+                    "NO_REMOTING",
+                    "NO_SERIALIZABLE",
+                    "NO_THREAD",
+                    "CRIPPLED_REFLECTION",
+                    "PLIB",
+                    "USE_TIMER_SELF_ROOT"
+                ]
+            },
+            "dependencies": {
+                "System.Diagnostics.Tools": "4.0.0",
+                "System.Linq": "4.0.0",
+                "System.Linq.Queryable": "4.0.0",
+                "System.Linq.Expressions": "4.0.0",
+                "System.Resources.ResourceManager": "4.0.0",
+                "System.Reflection": "4.0.0",
+                "System.Threading": "4.0.0",
+                "System.Runtime": "4.0.0",
+                "System.Reflection.Extensions": "4.0.0"
+            }
         },
         "dotnet5.4": {
             "compilationOptions": {
-              "define": [
-                "NO_EVENTARGS_CONSTRAINT",
-                "HAS_EDI",
-                "HAS_WINRT",
-                "HAS_PROGRESS",
-                "PREFER_ASYNC",
-                "HAS_AWAIT",
-                "HAS_APTCA",
-                "NO_REMOTING",
-                "NO_SERIALIZABLE",
-                "NO_THREAD",
-                "CRIPPLED_REFLECTION",
-                "PLIB",
-                "USE_TIMER_SELF_ROOT"
-              ]
+                "define": [
+                    "NO_EVENTARGS_CONSTRAINT",
+                    "HAS_EDI",
+                    "HAS_WINRT",
+                    "HAS_PROGRESS",
+                    "PREFER_ASYNC",
+                    "HAS_AWAIT",
+                    "HAS_APTCA",
+                    "NO_REMOTING",
+                    "NO_SERIALIZABLE",
+                    "NO_THREAD",
+                    "CRIPPLED_REFLECTION",
+                    "PLIB",
+                    "USE_TIMER_SELF_ROOT"
+                ]
             },
-          "dependencies": {
-            "System.Collections.Concurrent": "4.0.11-beta-23516",
-            "System.ComponentModel": "4.0.1-beta-23516",
-            "System.Linq": "4.0.1-beta-23516",
-            "System.Linq.Queryable": "4.0.1-beta-23516",
-            "System.Threading": "4.0.11-beta-23516",
-            "System.Threading.Thread": "4.0.0-beta-23516",
-            "System.Threading.ThreadPool": "4.0.10-beta-23516",
-            "System.Threading.Timer": "4.0.1-beta-23516"
-          }
+            "dependencies": {
+                "System.Collections.Concurrent": "4.0.11-beta-23516",
+                "System.ComponentModel": "4.0.1-beta-23516",
+                "System.Linq": "4.0.1-beta-23516",
+                "System.Linq.Queryable": "4.0.1-beta-23516",
+                "System.Threading": "4.0.11-beta-23516",
+                "System.Threading.Thread": "4.0.0-beta-23516",
+                "System.Threading.ThreadPool": "4.0.10-beta-23516",
+                "System.Threading.Timer": "4.0.1-beta-23516"
+            }
         }
     }
 }
