--- a/Ix.NET/Source/System.Interactive.Async.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Async.Providers/project.json
@@ -61,12 +61,9 @@
             },
             "dependencies": {
                 "System.Linq": "4.0.0",
-                "System.Collections.Concurrent": "4.0.0",
-                "System.ComponentModel": "4.0.0",
-                "System.Threading": "4.0.0",
-                "System.Threading.Timer": "4.0.0",
-                "System.Runtime": "4.0.0",
-                "System.Runtime.Extensions": "4.0.0"
+                "System.Linq.Expressions": "4.0.0",
+                "System.Linq.Queryable": "4.0.0",
+                "System.Reflection": "4.0.0"
             }
 
         },
@@ -89,13 +86,10 @@
                 ]
             },
             "dependencies": {
-                "System.Collections.Concurrent": "4.0.11-beta-23516",
-                "System.ComponentModel": "4.0.1-beta-23516",
                 "System.Linq": "4.0.1-beta-23516",
-                "System.Threading": "4.0.11-beta-23516",
-                "System.Threading.Thread": "4.0.0-beta-23516",
-                "System.Threading.ThreadPool": "4.0.10-beta-23516",
-                "System.Threading.Timer": "4.0.1-beta-23516"
+                "System.Linq.Expressions": "4.0.11-beta-23516",
+                "System.Linq.Queryable": "4.0.1-beta-23516",
+                "System.Reflection": "4.1.0-beta-23516"
             }
         }
     }
