Get tests to build/ported over to xUnit

--- a/Ix.NET/Source/System.Interactive.Async.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Async.Providers/project.json
@@ -63,7 +63,9 @@
                 "System.Linq": "4.0.0",
                 "System.Linq.Expressions": "4.0.0",
                 "System.Linq.Queryable": "4.0.0",
-                "System.Reflection": "4.0.0"
+                "System.Reflection": "4.0.0",
+                "System.Runtime": "4.0.0",
+                "System.Runtime.Extensions": "4.0.0"
             }
 
         },
