--- a/Rx.NET/Source/System.Reactive.Core/project.json
+++ b/Rx.NET/Source/System.Reactive.Core/project.json
@@ -22,7 +22,9 @@
                     "HAS_APTCA",
                     "HAS_WINFORMS",
                     "USE_TIMER_SELF_ROOT",
-                    "NO_WEAKREFOFT"
+                    "NO_WEAKREFOFT",
+                    "DESKTOPCLR",
+                    "DESKTOPCLR40"
                 ]
             }
         },
@@ -38,7 +40,28 @@
                     "HAS_APTCA",
                     "HAS_DISPATCHER_PRIORITY",
                     "HAS_WINFORMS",
-                    "USE_TIMER_SELF_ROOT"
+                    "USE_TIMER_SELF_ROOT",
+                    "DESKTOPCLR",
+                    "DESKTOPCLR45"
+                ]
+            }
+        },
+        "net46": {
+            "compilationOptions": {
+                "define": [
+                    "NO_EVENTARGS_CONSTRAINT",
+                    "HAS_EDI",
+                    "HAS_WINRT",
+                    "HAS_PROGRESS",
+                    "PREFER_ASYNC",
+                    "HAS_AWAIT",
+                    "HAS_APTCA",
+                    "HAS_DISPATCHER_PRIORITY",
+                    "HAS_TPL46",
+                    "HAS_WINFORMS",
+                    "USE_TIMER_SELF_ROOT",
+                    "DESKTOPCLR",
+                    "DESKTOPCLR46"
                 ]
             }
         },
@@ -55,10 +78,10 @@
                     "NO_REMOTING",
                     "NO_SERIALIZABLE",
                     "NO_THREAD",
-                    "NO_WEAKTABLE",
                     "CRIPPLED_REFLECTION",
-                    "PLIB",
-                    "USE_TIMER_SELF_ROOT"
+                    "NO_CDS_COLLECTIONS",
+                    "USE_TIMER_SELF_ROOT",
+                    "PLIB"
                 ]
             },
             "dependencies": {
@@ -70,7 +93,6 @@
                 "System.Runtime": "4.0.0",
                 "System.Runtime.Extensions": "4.0.0"
             }
-            
         },
         "dotnet5.4": {
             "compilationOptions": {
