--- a/Rx.NET/Source/System.Reactive.Interfaces/project.json
+++ b/Rx.NET/Source/System.Reactive.Interfaces/project.json
@@ -18,7 +18,9 @@
                     "HAS_APTCA",
                     "HAS_WINFORMS",
                     "USE_TIMER_SELF_ROOT",
-                    "NO_WEAKREFOFT"
+                    "NO_WEAKREFOFT",
+                    "DESKTOPCLR",
+                    "DESKTOPCLR40"
                 ]
             }
         },
@@ -34,7 +36,9 @@
                     "HAS_APTCA",
                     "HAS_DISPATCHER_PRIORITY",
                     "HAS_WINFORMS",
-                    "USE_TIMER_SELF_ROOT"
+                    "USE_TIMER_SELF_ROOT",
+                    "DESKTOPCLR",
+                    "DESKTOPCLR45"
                 ]
             }
         },
@@ -52,8 +56,9 @@
                     "NO_SERIALIZABLE",
                     "NO_THREAD",
                     "CRIPPLED_REFLECTION",
-                    "PLIB",
-                    "USE_TIMER_SELF_ROOT"
+                    "NO_CDS_COLLECTIONS",
+                    "USE_TIMER_SELF_ROOT",
+                    "PLIB"
                 ]
             },
             "dependencies": {
@@ -63,32 +68,6 @@
                 "System.Resources.ResourceManager": "4.0.0",
                 "System.Threading": "4.0.0",
                 "System.Runtime": "4.0.0"
-            }
-        },
-        "dotnet5.2": {
-            "compilationOptions": {
-                "define": [
-                    "NO_EVENTARGS_CONSTRAINT",
-                    "HAS_EDI",
-                    "HAS_WINRT",
-                    "HAS_PROGRESS",
-                    "PREFER_ASYNC",
-                    "HAS_AWAIT",
-                    "HAS_APTCA",
-                    "NO_REMOTING",
-                    "NO_SERIALIZABLE",
-                    "NO_THREAD",
-                    "CRIPPLED_REFLECTION",
-                    "PLIB",
-                    "USE_TIMER_SELF_ROOT"
-                ]
-            },
-            "dependencies": {
-                "System.Diagnostics.Tools": "4.0.1-beta-23516",
-                "System.Linq": "4.0.1-beta-23516",
-                "System.Linq.Expressions": "4.0.11-beta-23516",
-                "System.Resources.ResourceManager": "4.0.1-beta-23516",
-                "System.Threading": "4.0.11-beta-23516"
             }
         }
     }
