--- a/Rx.NET/Source/System.Reactive.Providers/project.json
+++ b/Rx.NET/Source/System.Reactive.Providers/project.json
@@ -22,7 +22,9 @@
                     "HAS_APTCA",
                     "HAS_WINFORMS",
                     "USE_TIMER_SELF_ROOT",
-                    "NO_WEAKREFOFT"
+                    "NO_WEAKREFOFT",
+                    "DESKTOPCLR",
+                    "DESKTOPCLR40"
                 ]
             }
         },
@@ -38,11 +40,32 @@
                     "HAS_APTCA",
                     "HAS_DISPATCHER_PRIORITY",
                     "HAS_WINFORMS",
-                    "USE_TIMER_SELF_ROOT"
+                    "USE_TIMER_SELF_ROOT",
+                    "DESKTOPCLR",
+                    "DESKTOPCLR45"
                 ]
             },
             "dependencies": {
                 "System.Reflection": "4.1.0-beta-23516"
+            }
+        },
+        "net46": {
+            "compilationOptions": {
+                "define": [
+                    "NO_EVENTARGS_CONSTRAINT",
+                    "HAS_EDI",
+                    "HAS_WINRT",
+                    "HAS_PROGRESS",
+                    "PREFER_ASYNC",
+                    "HAS_AWAIT",
+                    "HAS_APTCA",
+                    "HAS_DISPATCHER_PRIORITY",
+                    "HAS_TPL46",
+                    "HAS_WINFORMS",
+                    "USE_TIMER_SELF_ROOT",
+                    "DESKTOPCLR",
+                    "DESKTOPCLR46"
+                ]
             }
         },
         "dotnet5.1": {
@@ -59,8 +82,9 @@
                     "NO_SERIALIZABLE",
                     "NO_THREAD",
                     "CRIPPLED_REFLECTION",
-                    "PLIB",
-                    "USE_TIMER_SELF_ROOT"
+                    "NO_CDS_COLLECTIONS",
+                    "USE_TIMER_SELF_ROOT",
+                    "PLIB"
                 ]
             },
             "dependencies": {
