--- a/Rx.NET/Source/System.Reactive.Runtime.Remoting/project.json
+++ b/Rx.NET/Source/System.Reactive.Runtime.Remoting/project.json
@@ -22,23 +22,27 @@
                     "HAS_APTCA",
                     "HAS_WINFORMS",
                     "USE_TIMER_SELF_ROOT",
-                    "NO_WEAKREFOFT"
+                    "NO_WEAKREFOFT",
+                    "DESKTOPCLR",
+                    "DESKTOPCLR40"
                 ]
             }
         },
         "net45": {
           "compilationOptions": {
             "define": [
-              "NO_EVENTARGS_CONSTRAINT",
-              "HAS_EDI",
-              "HAS_WINRT",
-              "HAS_PROGRESS",
-              "PREFER_ASYNC",
-              "HAS_AWAIT",
-              "HAS_APTCA",
-              "HAS_DISPATCHER_PRIORITY",
-              "HAS_WINFORMS",
-              "USE_TIMER_SELF_ROOT"
+                "NO_EVENTARGS_CONSTRAINT",
+                "HAS_EDI",
+                "HAS_WINRT",
+                "HAS_PROGRESS",
+                "PREFER_ASYNC",
+                "HAS_AWAIT",
+                "HAS_APTCA",
+                "HAS_DISPATCHER_PRIORITY",
+                "HAS_WINFORMS",
+                "USE_TIMER_SELF_ROOT",
+                "DESKTOPCLR",
+                "DESKTOPCLR45"
             ]
           }    
         }
