Upgrade Core and interfaces to generations-based packages

--- a/Rx.NET/Source/System.Reactive.Core/project.json
+++ b/Rx.NET/Source/System.Reactive.Core/project.json
@@ -85,13 +85,14 @@
                 ]
             },
             "dependencies": {
-                "System.Linq": "4.0.0",
-                "System.Collections.Concurrent": "4.0.0",
-                "System.ComponentModel": "4.0.0",
-                "System.Threading": "4.0.0",
-                "System.Threading.Timer": "4.0.0",
-                "System.Runtime": "4.0.0",
-                "System.Runtime.Extensions": "4.0.0"
+                "System.ComponentModel": "4.0.1-rc3-23823",
+                "System.Diagnostics.Debug": "4.0.11-rc3-23823",
+                "System.Diagnostics.Contracts": "4.0.1-rc3-23823",
+                "System.Dynamic.Runtime": "4.0.11-rc3-23823",
+                "System.Linq": "4.0.1-rc3-23823",
+                "System.Runtime": "4.1.0-rc3-23823",
+                "System.Runtime.Extensions": "4.1.0-rc3-23823",
+                "System.Threading": "4.0.11-rc3-23823"
             }
         },
         "dotnet5.4": {
@@ -113,13 +114,13 @@
                 ]
             },
             "dependencies": {
-                "System.Collections.Concurrent": "4.0.11-beta-23516",
-                "System.ComponentModel": "4.0.1-beta-23516",
-                "System.Linq": "4.0.1-beta-23516",
-                "System.Threading": "4.0.11-beta-23516",
-                "System.Threading.Thread": "4.0.0-beta-23516",
-                "System.Threading.ThreadPool": "4.0.10-beta-23516",
-                "System.Threading.Timer": "4.0.1-beta-23516"
+                "System.Collections.Concurrent": "4.0.11-rc3-23823",
+                "System.ComponentModel": "4.0.1-rc3-23823",
+                "System.Linq": "4.0.1-rc3-23823",
+                "System.Threading": "4.0.11-rc3-23823",
+                "System.Threading.Thread": "4.0.0-rc3-23823",
+                "System.Threading.ThreadPool": "4.0.10-rc3-23823",
+                "System.Threading.Timer": "4.0.1-rc3-23823"
             }
         }
     }
