--- a/Rx.NET/Source/System.Reactive.Interfaces/project.json
+++ b/Rx.NET/Source/System.Reactive.Interfaces/project.json
@@ -9,7 +9,6 @@
     "projectUrl": "http://go.microsoft.com/fwlink/?LinkId=261273",
     "licenseUrl": "http://go.microsoft.com/fwlink/?LinkID=261272",
     "requireLicenseAcceptance": true,
-
     "frameworks": {
         "net40": {
             "compilationOptions": {
@@ -62,12 +61,12 @@
                 ]
             },
             "dependencies": {
-                "System.Diagnostics.Tools": "4.0.0",
-                "System.Linq": "4.0.0",
-                "System.Linq.Expressions": "4.0.0",
-                "System.Resources.ResourceManager": "4.0.0",
-                "System.Threading": "4.0.0",
-                "System.Runtime": "4.0.0"
+                "System.Diagnostics.Tools": "4.0.1-rc3-23823",
+                "System.Linq": "4.0.1-rc3-23823",
+                "System.Linq.Expressions": "4.0.11-rc3-23823",
+                "System.Resources.ResourceManager": "4.0.1-rc3-23823",
+                "System.Threading": "4.0.11-rc3-23823",
+                "System.Runtime": "4.1.0-rc3-23823"
             }
         }
     }
