Update core projects to generations-based refs

--- a/Rx.NET/Source/System.Reactive.WindowsRuntime/project.json
+++ b/Rx.NET/Source/System.Reactive.WindowsRuntime/project.json
@@ -40,9 +40,8 @@
                 "version": "1.0.1",
                 "type": "build"
             },
-            "System.Runtime": "4.0.0",
-            "System.Threading.Tasks": "4.0.0",
-            "System.Runtime.WindowsRuntime": "4.0.10"
+            "System.Threading.Tasks": "4.0.11-rc3-23823",
+            "System.Runtime.WindowsRuntime": "4.0.11-rc3-23823"
         }
 
     }
