--- a/Rx.NET/Source/System.Reactive.Interfaces/project.json
+++ b/Rx.NET/Source/System.Reactive.Interfaces/project.json
@@ -65,8 +65,8 @@
                 "System.Linq": "4.0.1-rc3-23823",
                 "System.Linq.Expressions": "4.0.11-rc3-23823",
                 "System.Resources.ResourceManager": "4.0.1-rc3-23823",
-                "System.Threading": "4.0.11-rc3-23823",
-                "System.Runtime": "4.1.0-rc3-23823"
+                "System.Runtime": "4.1.0-rc3-23823",
+                "System.Threading": "4.0.11-rc3-23823"
             }
         }
     }
