--- a/Rx.NET/Source/System.Reactive.Providers/project.json
+++ b/Rx.NET/Source/System.Reactive.Providers/project.json
@@ -46,7 +46,7 @@
                 ]
             },
             "dependencies": {
-                "System.Reflection": "4.1.0-beta-23516"
+               
             }
         },
         "net46": {
@@ -88,15 +88,8 @@
                 ]
             },
             "dependencies": {
-                "System.Diagnostics.Tools": "4.0.0",
-                "System.Linq": "4.0.0",
-                "System.Linq.Queryable": "4.0.0",
-                "System.Linq.Expressions": "4.0.0",
-                "System.Resources.ResourceManager": "4.0.0",
-                "System.Reflection": "4.0.0",
-                "System.Threading": "4.0.0",
-                "System.Runtime": "4.0.0",
-                "System.Reflection.Extensions": "4.0.0"
+                "System.Linq.Queryable": "4.0.1-rc3-23823",
+                "System.Reflection.Extensions": "4.0.1-rc3-23823"
             }
         },
         "dotnet5.4": {
@@ -118,14 +111,7 @@
                 ]
             },
             "dependencies": {
-                "System.Collections.Concurrent": "4.0.11-beta-23516",
-                "System.ComponentModel": "4.0.1-beta-23516",
-                "System.Linq": "4.0.1-beta-23516",
-                "System.Linq.Queryable": "4.0.1-beta-23516",
-                "System.Threading": "4.0.11-beta-23516",
-                "System.Threading.Thread": "4.0.0-beta-23516",
-                "System.Threading.ThreadPool": "4.0.10-beta-23516",
-                "System.Threading.Timer": "4.0.1-beta-23516"
+                "System.Linq.Queryable": "4.0.1-rc3-23823"
             }
         }
     }
