--- a/Ix.NET/Source/NuGet.Config
+++ b/Ix.NET/Source/NuGet.Config
@@ -2,9 +2,13 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="myget.org dotnet-core" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
+    <add key="myget.org dotnet-core" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />    
+    <add key="dotnet.myget.org dotnet-cli" value="https://dotnet.myget.org/F/dotnet-cli/api/v3/index.json" /> 
+    <add key="coreclr-xunit" value="https://www.myget.org/F/coreclr-xunit/api/v3/index.json" /> 
+    <add key="AspNetCIDev" value="https://www.myget.org/F/aspnetcidev/api/v3/index.json" />
+    <add key="nugetbuild" value="https://www.myget.org/F/nugetbuild/api/v3/index.json" />
     <add key="NuGet.org" value="https://api.nuget.org/v3/index.json" />
-  </packageSources>
+  </packageSources>  
   <disabledPackageSources>
      <clear />
   </disabledPackageSources>
