--- a/Ix.NET/Source/System.Interactive.Async/project.json
+++ b/Ix.NET/Source/System.Interactive.Async/project.json
@@ -30,7 +30,7 @@
                 ]
             }
         },
-        "dotnet5.1": {
+        "netstandard1.0": {
             "compilationOptions": {
                 "define": [
                     "HAS_AWAIT",
@@ -39,12 +39,12 @@
                 ]
             },
             "dependencies": {
-                "System.Diagnostics.Debug": "4.0.11-rc3-23823",
-                "System.Linq": "4.0.1-rc3-23823",
-                "System.Runtime.Extensions": "4.1.0-rc3-23823",
-                "System.Resources.ResourceManager": "4.0.1-rc3-23823",
-                "System.Runtime": "4.1.0-rc3-23823",
-                "System.Threading": "4.0.11-rc3-23823"
+                "System.Diagnostics.Debug": "4.0.11-rc2-23904",
+                "System.Linq": "4.0.1-rc2-23904",
+                "System.Runtime.Extensions": "4.1.0-rc2-23904",
+                "System.Resources.ResourceManager": "4.0.1-rc2-23904",
+                "System.Runtime": "4.1.0-rc2-23904",
+                "System.Threading": "4.0.11-rc2-23904"
             }
         }
     }
