--- a/Ix.NET/Source/System.Interactive.Providers/project.json
+++ b/Ix.NET/Source/System.Interactive.Providers/project.json
@@ -33,7 +33,7 @@
                 ]
             }
         },
-        "dotnet5.1": {
+        "netstandard1.0": {
             "compilationOptions": {
                 "define": [
                     "HAS_AWAIT",
@@ -42,9 +42,9 @@
                 ]
             },
             "dependencies": {
-                "System.Linq.Expressions": "4.0.11-rc3-23823",
-                "System.Linq.Queryable": "4.0.1-rc3-23823",
-                "System.Reflection": "4.1.0-rc3-23823"
+                "System.Linq.Expressions": "4.0.11-rc2-23904",
+                "System.Linq.Queryable": "4.0.1-rc2-23904",
+                "System.Reflection": "4.1.0-rc2-23904"
             }
 
         }
